# sistemas-distribuidos-unal

./: LICENSE  README.md
calculo-pi/: CMakeLists.txt  calculo_pi_procesos.c  main.c
openmp_calculo_pi/: CMakeLists.txt  main  main.c
